--- a/.github/workflows/ci_api.yml
+++ b/.github/workflows/ci_api.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Run python script
         run: |
           python -m pip install --upgrade pip
-          python pip install requests
-          python pip install sqlalchemy
+          pip install requests
+          pip install sqlalchemy
           python ./api_rick_and_morty/data_to_database.py       
