--- a/.github/workflows/ci_api.yml
+++ b/.github/workflows/ci_api.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run python script
         run: |
           python -m pip install --upgrade pip
+          pip install os
           pip install requests
           pip install sqlalchemy
           python ./api_rick_and_morty/data_to_database.py       
