--- a/.github/workflows/ci_api.yml
+++ b/.github/workflows/ci_api.yml
@@ -27,5 +27,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+          pip install psycopg2
           pip install sqlalchemy
           python ./api_rick_and_morty/data_to_database.py       
